# Headtwitch_Detection_and_Classification

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_gui_v3.py
core/: __init__.py  config.py  data_processing.py  detectors.py  feature_extraction.py  ml_models.py
docs/: detection_methods.md  experimental_workflow_diagrams.md  faq.md  installation.md  parameter_tuning_guide.md  quickstart.md  setup_guide.md  workflow.md
gui_v2/: IMPLEMENTATION_COMPLETE.md  TUNE_PARAMETERS_IMPLEMENTATION.md  __init__.py  batch_analysis_v2.py  csv_editor_widget.py  deploy_tab.py  detection_utils.py  diagnostics_graph_widget.py  main_window.py  node_mapping_dialog.py  parameter_panel.py  prepare_data_tab.py  project_dialog.py  project_manager.py  video_inspector_widget.py  welcome_tab.py  workflow_tracker.py
gui_v2/1filetest/: README.md  project_config.json
gui_v2/1filetest/parameters/: true_params.json
hdac/: __init__.py  __main__.py
